5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4378/executions/1596_1571.log
== TEST (2019-04-02 01:51:06) 
-- CODE:
input("texto")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:51:35) 
-- CODE:
input("letra")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:52:08) 
-- CODE:
texto=igreja
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=igreja
NameError: name 'igreja' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:52:25) 
-- CODE:
texto=igreja
print(igreja.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=igreja
NameError: name 'igreja' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:52:27) 
-- CODE:
texto=igreja
print(igreja.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    texto=igreja
NameError: name 'igreja' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:00) 
-- CODE:
texto="igreja"
print(texto.upper())
-- OUTPUT:
IGREJA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:53:02) 
-- CODE:
texto="igreja"
print(texto.upper())
-- EXECUTION TIME:
0.133185
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
IGREJA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:06) 
-- CODE:
texto="igreja"
print(texto.upper())
-- OUTPUT:
IGREJA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:08) 
-- CODE:
texto="igreja"
print(texto.upper())
-- OUTPUT:
IGREJA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:45) 
-- CODE:
input(texto="igreja")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(texto="igreja")
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:47) 
-- CODE:
input(texto="igreja")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(texto="igreja")
TypeError: input() takes no keyword arguments
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:52) 
-- CODE:
input("igreja")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:56) 
-- CODE:
input("igreja")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:53:58) 
-- CODE:
input("igreja")
print(texto.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper())
NameError: name 'texto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:54:35) 
-- CODE:
texto=input("igreja")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:54:42) 
-- CODE:
texto=input("igreja")
print(texto.upper())
-- EXECUTION TIME:
0.212762
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 01:55:11) 
-- CODE:
texto=input("Fale algo")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 01:55:19) 
-- CODE:
texto=input("Fale algo")
print(texto.upper())
-- EXECUTION TIME:
0.14491
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
